--- a/about.html
+++ b/about.html
@@ -5,3 +5,11 @@ title: About
 <h2>About Me</h2>
 <p>I am Amosoft, a reverse engineer and developer.  
 This portfolio showcases my reverse engineering case studies, firmware analysis, and research writeups.</p>
+<!-- Sidebar -->
+<div class="sidebar">
+  <h2>Amosoft</h2>
+  <a href="index.html">Home</a>
+  <a href="xbox-jtag.html">Xbox JTAG</a>
+  <a href="firmware-analysis.html">Firmware Analysis</a>
+  <a href="about.html">About</a>
+</div>
