--- a/about.html
+++ b/about.html
@@ -1,15 +1,85 @@
----
-layout: default
-title: About
----
-<h2>About Me</h2>
-<p>I am Amosoft, a reverse engineer and developer.  
-This portfolio showcases my reverse engineering case studies, firmware analysis, and research writeups.</p>
-<!-- Sidebar -->
-<div class="sidebar">
-  <h2>Amosoft</h2>
-  <a href="index.html">Home</a>
-  <a href="xbox-jtag.html">Xbox JTAG</a>
-  <a href="firmware-analysis.html">Firmware Analysis</a>
-  <a href="about.html">About</a>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About | Amosoft</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: "Fira Code", monospace;
+      background-color: #0d0d0d;
+      color: #e6e6e6;
+      display: flex;
+    }
+    .sidebar {
+      width: 250px;
+      background-color: #1a1a1a;
+      height: 100vh;
+      padding: 20px;
+      box-shadow: 2px 0 8px rgba(0,0,0,0.5);
+      position: fixed;
+    }
+    .sidebar h2 {
+      color: #00ff99;
+      font-size: 1.5em;
+      margin-bottom: 1em;
+    }
+    .sidebar a {
+      display: block;
+      color: #ccc;
+      text-decoration: none;
+      margin: 10px 0;
+      transition: 0.2s;
+    }
+    .sidebar a:hover {
+      color: #00ff99;
+      margin-left: 5px;
+    }
+    .content {
+      margin-left: 270px;
+      padding: 30px;
+      max-width: 900px;
+    }
+    h1 { color: #ffcc00; }
+  </style>
+</head>
+<body>
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <h2>Amosoft</h2>
+    <a href="index.html">Home</a>
+    <a href="xbox-jtag.html">Xbox JTAG</a>
+    <a href="firmware-analysis.html">Firmware Analysis</a>
+    <a href="about.html">About</a>
+  </div>
+
+  <!-- Main Content -->
+  <div class="content">
+    <h1>About Me</h1>
+    <p>
+      I am <strong>Amosoft</strong>, a developer and reverse engineer.  
+      My work focuses on exploring hardware, firmware, and software systems 
+      to uncover vulnerabilities, document hidden behaviors, and build tools 
+      for deeper technical understanding.
+    </p>
+
+    <h2>Skills</h2>
+    <ul>
+      <li>Reverse Engineering (firmware, binaries, embedded systems)</li>
+      <li>Debugging & Disassembly (Ghidra, IDA Pro, Radare2)</li>
+      <li>Hardware Analysis (JTAG, UART, SWD, PCB inspection)</li>
+      <li>Exploit Development & Security Research</li>
+      <li>Web & Software Development</li>
+    </ul>
+
+    <h2>Contact</h2>
+    <p>You can reach me via:</p>
+    <ul>
+      <li>Email: <a href="mailto:yourname@example.com">yourname@example.com</a></li>
+      <li>GitHub: <a href="https://github.com/Justinprex" target="_blank">github.com/Justinprex</a></li>
+      <li>Twitter/X: <a href="https://x.com/yourhandle" target="_blank">@yourhandle</a></li>
+    </ul>
+  </div>
+</body>
+</html>
