--- a/index.html
+++ b/index.html
@@ -3,96 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Amosoft RE Portfolio</title>
+  <title>Amosoft Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <!-- Sidebar Navigation -->
-  <div class="sidebar">
-    <h2>Amosoft</h2>
-    <a href="#home">Home</a>
-    <a href="#projects">Projects</a>
-    <a href="#xbox">Xbox JTAG</a>
-    <a href="#firmware">Firmware Analysis</a>
-    <a href="#about">About</a>
-  </div>
-
-  <!-- Main Content -->
-  <div class="content">
-
-    <!-- Home Section -->
-    <section id="home">
-      <h1>Reverse Engineering Portfolio</h1>
-      <p>Welcome to my portfolio of reverse engineering projects and writeups.  
-      I specialize in analyzing microcontrollers, firmware, and console mods.  
-      This site documents my case studies, techniques, and findings.</p>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects">
-      <h2>Featured Case Studies</h2>
-
-      <!-- Case Study 1 -->
-      <div class="case-study" id="xbox">
-        <h2>Case Study: STM32 + Xbox JTAG</h2>
-        <p><strong>Date:</strong> September 25, 2025</p>
-        <p>Exploring the reverse engineering of STM32 microcontrollers  
-        and Xbox JTAG modifications. Focused on debugging protocols,  
-        bootloaders, and hardware bypasses.</p>
-        <a href="#xbox-details" class="readmore">Read More →</a>
-      </div>
-
-      <!-- Case Study 2 -->
-      <div class="case-study" id="firmware">
-        <h2>Case Study: Firmware Analysis</h2>
-        <p><strong>Date:</strong> October 2025</p>
-        <p>Analyzing proprietary firmware to uncover communication protocols,  
-        encryption methods, and potential security flaws. Tools used:  
-        <code>Ghidra</code>, <code>Binwalk</code>, <code>Radare2</code>.</p>
-        <a href="#firmware-details" class="readmore">Read More →</a>
-      </div>
-    </section>
-
-    <!-- Xbox JTAG Detailed Section -->
-    <section id="xbox-details">
-      <h2>Deep Dive: STM32 + Xbox JTAG</h2>
-      <p>The STM32 was interfaced with the Xbox JTAG to reverse engineer  
-      memory access and instruction hooks. Key steps included:</p>
+  <!-- Header -->
+  <header>
+    <h1>Amosoft Tech 9</h1>
+    <nav>
       <ul>
-        <li>Dumping flash memory via SWD interface.</li>
-        <li>Disassembling boot ROM with <code>Ghidra</code>.</li>
-        <li>Bypassing signature checks for custom payload execution.</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="firmware-analysis.html">Firmware Analysis</a></li>
+        <li><a href="xbox-jtag.html">Xbox JTAG</a></li>
       </ul>
-      <p>Result: Successful modification and deeper understanding of the  
-      console security layers.</p>
-    </section>
+    </nav>
+  </header>
 
-    <!-- Firmware Analysis Detailed Section -->
-    <section id="firmware-details">
-      <h2>Deep Dive: Firmware Analysis</h2>
-      <p>This project focused on understanding a closed-source device firmware.  
-      Highlights included:</p>
-      <ul>
-        <li>Extracting the filesystem with <code>binwalk</code>.</li>
-        <li>Identifying hardcoded keys inside the binary.</li>
-        <li>Tracing communication protocols with <code>Wireshark</code>.</li>
-      </ul>
-      <p>Outcome: Security flaws were documented for responsible disclosure.</p>
-    </section>
+  <!-- Hero Section -->
+  <section class="hero">
+    <h2>Hardware / Software Reverse Engineering</h2>
+    <p>Exploring firmware, hardware debugging, and system analysis.</p>
+  </section>
 
-    <!-- About Section -->
-    <section id="about">
-      <h2>About Me</h2>
-      <p>I am Amosoft, a reverse engineer and developer.  
-      My focus is on microcontrollers, firmware research,  
-      and hardware-level security bypasses.</p>
-      <p>This portfolio is a living collection of my case studies,  
-      documenting methodologies, findings, and technical details  
-      in the field of reverse engineering.</p>
-    </section>
+  <!-- Posts Section -->
+  <section class="posts">
+    <h2>Posts</h2>
+    <ul>
+      <li>
+        <a href="posts/stm32-jtag.html">Writing a GHIDRA Loader: STM32 Edition</a> 
+        <span class="date">Feb 20, 2020</span>
+        <p>Dumping firmware off an Xbox One controller using SWD...</p>
+      </li>
+      <li>
+        <a href="posts/xbox-swd.html">Hardware Debugging with SWD</a> 
+        <span class="date">Jan 29, 2020</span>
+        <p>Exploring OpenOCD, SWD, and Xbox One Controller firmware dumps...</p>
+      </li>
+    </ul>
+  </section>
 
-  </div><!-- End Content -->
-
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Amosoft. All rights reserved.</p>
+  </footer>
 </body>
 </html>
