--- a/about.html
+++ b/about.html
@@ -59,6 +59,9 @@
     <p>
       For consulting, collaboration, or inquiries about my work, please reach out via the contact information on the main page.
     </p>
+
+    <!-- Update marker -->
+    <p><em>Last updated: September 25, 2025</em></p>
   </main>
 
   <!-- Footer -->
